fixed a small alignment issue with the top of the page

--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,13 @@
 body {
     background-repeat:repeat-x;
     background-color: var(--lightPink);
-    background-image: url("/assets/images/background-pattern-desktop.svg");
+    background-image: url("assets/images/background-pattern-desktop.svg");
 
     font-family: "Work Sans", sans-serif;
     display: flex;
     flex-direction: column;
-    padding-top: 5%;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -27,11 +28,10 @@ body {
     background-color: var(--white);
     display: flex;
     flex-direction: column;
-    margin: auto;
     border-radius: 2.5%;
     width: 40%;
     padding: 25px;
-    padding-top: 0px;
+    margin-top: 90px;
 }
 .card h1 {
     font-weight: 700;
@@ -67,12 +67,11 @@ body {
 
 @media only screen and (max-width: 500px) {
     body {
-        background-image: url("/assets/images/background-pattern-mobile.svg");
+        background-image: url("assets/images/background-pattern-mobile.svg");
     }
     .card {
         width: 85%;
         padding: 15px;
         border-radius: 5%;
-        margin-top: 90px;
     }
 }
